ui: fix height of #docs-canvas and #main-canvas
For some reason 100% on #docs-canvas overflows its parent.

--- a/showdocs/static/showdocs.scss
+++ b/showdocs/static/showdocs.scss
@@ -173,7 +173,6 @@ $container-margin-lr: 8px;
     // Becuase of the margin on #container (ancestor of this), putting 100%
     // here adds an horizontal scrollbar. Deduct the margin to avoid that.
     width: calc(100% - #{$container-margin-lr * 2});
-    height: 100%;
 }
 
 #docs-scrollbar-canvas {
